--- a/src/stylus/utilities.styl
+++ b/src/stylus/utilities.styl
@@ -71,10 +71,12 @@
 // Never use this, it's for an @extend only
 ._icon_ {
   content: "i";
-  float:left;
+  display: inline-block;
   text-align: center;
+  vertical-align: middle;
   width: $spacing*3.2;
   height: $spacing*3.2;
+  line-height: $lineHeight*2;
   margin-right: $spacing;
   border: 1px solid $border;
 }
